Added easy way to run examples from the command line