@@ -6,8 +6,10 @@
   :plugins [[lein-codox "0.10.7"]]
   :dependencies [[org.clojure/clojure "1.10.0"] [clojure2d "1.1.0"]]
   :repl-options {:init-ns lsystems.core}
+  ;:main
+  :jvm-opts ["--illegal-access=deny"] ;; suppress reflection warning
   :codox {:source-uri "https://github.com/joebentley/lsystems/blob/master/{filepath}#L{line}"
           :output-path "docs"
           :html {:transforms [[:head] [:append
-                                       [:script { :src "https://polyfill.io/v3/polyfill.min.js?features=es6" }]
+                                       [:script { :src "https://polyfill.io/v3/polyfill.min.js?features=es6"}]
                                        [:script :async { :id "MathJax-script" :async true :src "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"}]]]}})
